Update wedding details and names in index.html

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body class="bg-gray-50 text-gray-800">
 
     <section class="h-screen flex flex-col items-center justify-center text-center hero-bg text-white px-4">
-        <h1 class="serif text-5xl md:text-7xl mb-4">Minh & Phương</h1>
+        <h1 class="serif text-5xl md:text-7xl mb-4">Khang & Vy</h1>
         <p class="uppercase tracking-[0.5em] text-sm md:text-base">Chúng mình sắp cưới</p>
         <div class="mt-8 border-t border-white w-16"></div>
-        <p class="mt-4 serif italic text-xl">20 . 02 . 2026</p>
+        <p class="mt-4 serif italic text-xl">06 . 06 . 2026</p>
         <a href="#rsvp" class="mt-12 px-8 py-3 border border-white hover:bg-white hover:text-black transition duration-300 text-sm tracking-widest">RSVP</a>
     </section>
 
@@ -31,18 +31,18 @@
         <div class="space-y-12">
             <div class="flex flex-col md:flex-row items-center gap-8">
                 <div class="w-full md:w-1/2 text-right hidden md:block">
-                    <span class="text-gray-400">2020</span>
+                    <span class="text-gray-400">2023</span>
                 </div>
                 <div class="w-2 h-2 bg-gray-300 rounded-full"></div>
                 <div class="w-full md:w-1/2 text-left">
-                    <p class="font-semibold md:hidden text-gray-400">2020</p>
-                    <p>Lần đầu gặp gỡ tại một quán cà phê nhỏ vào chiều mưa.</p>
+                    <p class="font-semibold md:hidden text-gray-400">2023</p>
+                    <p>Gặp gỡ tại một quán bánh.</p>
                 </div>
             </div>
             <div class="flex flex-col md:flex-row items-center gap-8">
                 <div class="w-full md:w-1/2 text-right order-2 md:order-1">
                     <p class="font-semibold md:hidden text-gray-400">2025</p>
-                    <p>Lời cầu hôn bất ngờ trên đỉnh núi Langbiang.</p>
+                    <p>Lời cầu hôn bất ngờ trên sông Nho Quế</p>
                 </div>
                 <div class="w-2 h-2 bg-gray-300 rounded-full order-1 md:order-2"></div>
                 <div class="w-full md:w-1/2 text-left hidden md:block order-3">
@@ -57,8 +57,8 @@
         <div class="grid md:grid-cols-2 gap-12 max-w-5xl mx-auto">
             <div class="space-y-4">
                 <h3 class="uppercase tracking-widest font-semibold text-sm">Thời gian & Địa điểm</h3>
-                <p>17:30 — Đón khách<br>19:00 — Khai tiệc</p>
-                <p class="italic">GEM Center, Quận 1, TP. HCM</p>
+                <p>10:30 — Đón khách<br>11:30 — Khai tiệc</p>
+                <p class="italic">Nam Phước, Đà Nẵng</p>
                 <button class="mt-4 text-xs border-b border-black pb-1 hover:text-gray-500 transition">XEM BẢN ĐỒ</button>
             </div>
             <div class="space-y-4">
@@ -108,7 +108,7 @@
     </section>
 
     <footer class="py-10 text-center text-gray-400 text-xs tracking-widest uppercase">
-        <p>Minh & Phương — 20.02.2026</p>
+        <p>Khang & Vy — 06.06.2026</p>
     </footer>
 
 </body>
