--- a/index.html
+++ b/index.html
@@ -3,102 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <title>Wedding Website</title>
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-            color: #333;
-        }
-        header {
-            background-color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        h1 {
-            font-size: 2.5em;
-        }
-        .event {
-            background: #fff;
-            margin: 20px;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 10px;
-            margin: 20px;
-        }
-        .gallery img {
-            width: 100%;
-            border-radius: 5px;
-        }
-        .rsvp-form {
-            margin: 20px;
-        }
-    </style>
+    <title>Our Wedding</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Wedding!</h1>
+        <h1>Welcome to Our Wedding</h1>
+        <p>Join us on our special day!</p>
     </header>
-    <section class="timeline">
-        <div class="event">
-            <h2>Tiệc Vũ Quy</h2>
-            <p>Date: 2026-03-15</p>
-            <p>Location: Venue A</p>
-            <button onclick="addToCalendar('2026-03-15', 'Tiệc Vũ Quy')">Add to Calendar</button>
-        </div>
-        <div class="event">
-            <h2>Tiệc Tân Hôn</h2>
-            <p>Date: 2026-03-20</p>
-            <p>Location: Venue B</p>
-            <button onclick="addToCalendar('2026-03-20', 'Tiệc Tân Hôn')">Add to Calendar</button>
-        </div>
-        <div class="event">
-            <h2>Tiệc Báo Hỷ</h2>
-            <p>Date: 2026-03-25</p>
-            <p>Location: Venue C</p>
-            <button onclick="addToCalendar('2026-03-25', 'Tiệc Báo Hỷ')">Add to Calendar</button>
-        </div>
+
+    <section id="story">
+        <h2>Our Story</h2>
+        <p>A beautiful love story that led us to this moment...</p>
+        <ul>
+            <li>Met in 2015</li>
+            <li>Engaged in 2025</li>
+        </ul>
     </section>
 
-    <section class="gallery">
+    <section id="events">
+        <h2>Events</h2>
+        <ul>
+            <li>Tiệc Vũ Quy on 06/06/2026 at 10:30 AM</li>
+            <li>Tiệc Tân Hôn on 14/06/2026 at 10:30 AM</li>
+            <li>Tiệc Báo Hỷ - coming soon</li>
+        </ul>
+    </section>
+
+    <section id="gallery">
         <h2>Gallery</h2>
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
+        <div class="grid">
+            <img src="image1.jpg" alt="Gallery Image 1">
+            <img src="image2.jpg" alt="Gallery Image 2">
+            <img src="image3.jpg" alt="Gallery Image 3">
+            <img src="image4.jpg" alt="Gallery Image 4">
+        </div>
     </section>
 
-    <section class="rsvp-form">
+    <section id="rsvp">
         <h2>RSVP</h2>
         <form>
             <label for="name">Name:</label>
             <input type="text" id="name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" required>
-            <button type="submit">Submit</button>
+            <label for="date">Event Date:</label>
+            <input type="date" id="date" required>
+            <input type="submit" value="Submit">
         </form>
     </section>
 
-    <script>
-        function addToCalendar(date, eventName) {
-            let eventStartTime = new Date(date);
-            let eventEndTime = new Date(eventStartTime);
-            eventEndTime.setHours(eventEndTime.getHours() + 3); // End time after 3 hours
-            let eventDetails = {
-                title: eventName,
-                start: eventStartTime.toISOString(),
-                end: eventEndTime.toISOString(),
-            };
-            // Here you would typically integrate with a calendar API to add the event
-            alert('Added to calendar: ' + eventName);
-        }
-    </script>
+    <section id="dresscode">
+        <h2>Dresscode</h2>
+        <p>Please dress elegantly!</p>
+    </section>
+
+    <footer>
+        <p>Thank you for being a part of our lives!</p>
+    </footer>
 </body>
 </html>
