Update index.html with complete minimalist wedding website v4

--- a/index.html
+++ b/index.html
@@ -1,63 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Wedding</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Welcome to Our Wedding</h1>
-        <p>Join us on our special day!</p>
-    </header>
-
-    <section id="story">
-        <h2>Our Story</h2>
-        <p>A beautiful love story that led us to this moment...</p>
-        <ul>
-            <li>Met in 2015</li>
-            <li>Engaged in 2025</li>
-        </ul>
-    </section>
-
-    <section id="events">
-        <h2>Events</h2>
-        <ul>
-            <li>Tiệc Vũ Quy on 06/06/2026 at 10:30 AM</li>
-            <li>Tiệc Tân Hôn on 14/06/2026 at 10:30 AM</li>
-            <li>Tiệc Báo Hỷ - coming soon</li>
-        </ul>
-    </section>
-
-    <section id="gallery">
-        <h2>Gallery</h2>
-        <div class="grid">
-            <img src="image1.jpg" alt="Gallery Image 1">
-            <img src="image2.jpg" alt="Gallery Image 2">
-            <img src="image3.jpg" alt="Gallery Image 3">
-            <img src="image4.jpg" alt="Gallery Image 4">
-        </div>
-    </section>
-
-    <section id="rsvp">
-        <h2>RSVP</h2>
-        <form>
-            <label for="name">Name:</label>
-            <input type="text" id="name" required>
-            <label for="date">Event Date:</label>
-            <input type="date" id="date" required>
-            <input type="submit" value="Submit">
-        </form>
-    </section>
-
-    <section id="dresscode">
-        <h2>Dresscode</h2>
-        <p>Please dress elegantly!</p>
-    </section>
-
-    <footer>
-        <p>Thank you for being a part of our lives!</p>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <link rel="stylesheet" href="styles.css">\n    <title>My Wedding</title>\n</head>\n<body>\n    <header>\n        <h1>Welcome to Our Wedding</h1>\n        <nav>\n            <ul>\n                <li><a href="#landing">Landing</a></li>\n                <li><a href="#timeline">Timeline</a></li>\n                <li><a href="#events">Events</a></li>\n                <li><a href="#gallery">Gallery</a></li>\n                <li><a href="#rsvp">RSVP</a></li>\n            </ul>\n        </nav>\n    </header>\n    <section id="landing">\n        <h2>Landing Page</h2>\n        <p>Join us for our wedding celebration!</p>\n    </section>\n    <section id="timeline">\n        <h2>Timeline</h2>\n        <ul>\n            <li>10:00 AM - Ceremony</li>\n            <li>12:00 PM - Reception</li>\n            <li>2:00 PM - Cake Cutting</li>\n        </ul>\n    </section>\n    <section id="events">\n        <h2>Events</h2>\n        <div id="calendar">\n            <!-- Calendar HTML/JS will go here -->\n        </div>\n    </section>\n    <section id="gallery">\n        <h2>Gallery</h2>\n        <div>\n            <img src="image1.jpg" alt="Wedding Image 1">\n            <img src="image2.jpg" alt="Wedding Image 2">\n            <img src="image3.jpg" alt="Wedding Image 3">\n        </div>\n    </section>\n    <section id="rsvp">\n        <h2>RSVP</h2>\n        <form id="rsvp-form">\n            <label for="name">Name:</label>\n            <input type="text" id="name" name="name" required>\n            <label for="guests">Number of Guests:</label>\n            <input type="number" id="guests" name="guests" required>\n            <button type="submit">Submit</button>\n        </form>\n    </section>\n    <div id="thank-you-modal" style="display:none;">\n        <h2>Thank You!</h2>\n        <p>Your RSVP has been received.</p>\n    </div>\n    <script src="script.js"></script>\n</body>\n</html>
