--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <link rel="stylesheet" href="styles.css">\n    <title>My Wedding</title>\n</head>\n<body>\n    <header>\n        <h1>Welcome to Our Wedding</h1>\n        <nav>\n            <ul>\n                <li><a href="#landing">Landing</a></li>\n                <li><a href="#timeline">Timeline</a></li>\n                <li><a href="#events">Events</a></li>\n                <li><a href="#gallery">Gallery</a></li>\n                <li><a href="#rsvp">RSVP</a></li>\n            </ul>\n        </nav>\n    </header>\n    <section id="landing">\n        <h2>Landing Page</h2>\n        <p>Join us for our wedding celebration!</p>\n    </section>\n    <section id="timeline">\n        <h2>Timeline</h2>\n        <ul>\n            <li>10:00 AM - Ceremony</li>\n            <li>12:00 PM - Reception</li>\n            <li>2:00 PM - Cake Cutting</li>\n        </ul>\n    </section>\n    <section id="events">\n        <h2>Events</h2>\n        <div id="calendar">\n            <!-- Calendar HTML/JS will go here -->\n        </div>\n    </section>\n    <section id="gallery">\n        <h2>Gallery</h2>\n        <div>\n            <img src="image1.jpg" alt="Wedding Image 1">\n            <img src="image2.jpg" alt="Wedding Image 2">\n            <img src="image3.jpg" alt="Wedding Image 3">\n        </div>\n    </section>\n    <section id="rsvp">\n        <h2>RSVP</h2>\n        <form id="rsvp-form">\n            <label for="name">Name:</label>\n            <input type="text" id="name" name="name" required>\n            <label for="guests">Number of Guests:</label>\n            <input type="number" id="guests" name="guests" required>\n            <button type="submit">Submit</button>\n        </form>\n    </section>\n    <div id="thank-you-modal" style="display:none;">\n        <h2>Thank You!</h2>\n        <p>Your RSVP has been received.</p>\n    </div>\n    <script src="script.js"></script>\n</body>\n</html>
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Khang & Vy - Wedding Invitation</title>
+    <meta name="title" content="Khang & Vy - Wedding Invitation">
+    <meta name="description" content="Trân trọng kính mời bạn đến dự lễ cưới của Khang và Vy vào ngày 20.02.2026.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Khang & Vy - Wedding Invitation">
+    <meta property="og:image" content="assets/images/thumbnail.jpg">
+
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:italic,wght@400;700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body class="bg-[#fafafa] text-gray-800">
+
+    <section class="h-screen flex flex-col items-center justify-center text-center hero-bg text-white px-4">
+        <div class="fade-in">
+            <h1 class="serif text-5xl md:text-8xl mb-4">Khang & Vy</h1>
+            <p class="uppercase tracking-[0.6em] text-xs md:text-sm">Save Our Date</p>
+            <div class="mt-8 border-t border-white/50 w-24 mx-auto"></div>
+            <p class="mt-6 serif italic text-2xl md:text-3xl">20 . 02 . 2026</p>
+            <a href="#rsvp" class="mt-12 inline-block px-10 py-3 border border-white hover:bg-white hover:text-black transition duration-500 text-xs tracking-[0.3em]">RSVP</a>
+        </div>
+    </section>
+
+    <section id="rsvp" class="py-24 px-6 bg-[#f2f2f2]">
+        <div class="max-w-lg mx-auto bg-white p-12 shadow-sm text-center">
+            <h2 class="serif text-4xl mb-4">RSVP</h2>
+            <form id="rsvpForm" class="text-left space-y-8">
+                <input type="text" id="name" placeholder="Họ và tên của bạn" required class="w-full border-b border-gray-200 py-3 focus:outline-none focus:border-black transition text-sm">
+                <select id="guests" class="w-full border-b border-gray-200 py-3 bg-transparent focus:outline-none focus:border-black transition text-sm text-gray-500">
+                    <option value="1">1 người</option>
+                    <option value="2">2 người</option>
+                </select>
+                <textarea id="message" placeholder="Lời chúc gửi đến Khang & Vy" class="w-full border-b border-gray-200 py-3 focus:outline-none focus:border-black transition text-sm" rows="2"></textarea>
+                <button type="submit" class="w-full bg-black text-white py-4 text-[10px] tracking-[0.4em] uppercase hover:bg-gray-800 transition">Gửi xác nhận</button>
+            </form>
+        </div>
+    </section>
+
+    <script src="assets/js/script.js"></script>
+</body>
+</html>
