--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 <div class="event-card p-8 border border-gray-100 rounded-sm space-y-4">
                     <h3 class="serif text-2xl">Tiệc Vu Quy</h3>
                     <p class="font-semibold text-amber-800">06 . 06 . 2026</p>
-                    <p class="text-sm text-gray-500 leading-relaxed">Nam Phước, Duy Xuyên<br>Đà Nẵng</p>
+                    <p class="text-sm text-gray-500 leading-relaxed">Nam Phước<br>Đà Nẵng</p>
                     <a href="#" class="inline-block text-[10px] border-b border-black pb-1 uppercase tracking-widest mt-4">Xem bản đồ</a>
                 </div>
 
                 <div class="event-card p-8 border border-gray-100 rounded-sm space-y-4 bg-gray-50 md:scale-105 shadow-sm">
                     <h3 class="serif text-2xl">Tiệc Tân Hôn</h3>
                     <p class="font-semibold text-amber-800">14 . 06 . 2026</p>
-                    <p class="text-sm text-gray-500 leading-relaxed">Thành phố Long Xuyên<br>An Giang</p>
+                    <p class="text-sm text-gray-500 leading-relaxed">Long Xuyên<br>An Giang</p>
                     <a href="#" class="inline-block text-[10px] border-b border-black pb-1 uppercase tracking-widest mt-4">Xem bản đồ</a>
                 </div>
 
